# gsheets

./: .gitignore  .travis.yaml  .travis.yml  CHANGES  CHANGES.rst  CHANGES.txt  LICENSE  LICENSE.txt  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  run-tests.py  setup.cfg  setup.py  try-api-limits.py  try-example.py
.github/workflows/: build.yaml
docs/: api.rst  conf.py  index.rst
gsheets/: __init__.py  _compat.py  api.py  backend.py  coordinates.py  export.py  models.py  oauth2.py  tools.py  urls.py
tests/: conftest.py  test_api.py  test_backend.py  test_compat.py  test_models.py
