[project]
name = "gsheets"
authors = [{ name = "Sebastian Bank", email = "sebastian.bank@uni-leipzig.de" }]
description = "Pythonic wrapper for the Google Sheets API"
keywords = ["spreadhseets", "google", "api",  "v4", "wrapper", "csv", "pandas"]
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
  "google-api-python-client",
  "oauth2client>=1.5.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
]

[project.urls]
Homepage = "https://github.com/xflr6/gsheets"
Documentation = "https://gsheets.readthedocs.io"
Changelog = "https://gsheets.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/xflr6/gsheets/issues"
CI = "https://github.com/xflr6/gsheets/actions"
Coverage = "https://codecov.io/gh/xflr6/gsheets"

[project.optional-dependencies]
dev = ["build", "wheel", "twine", "flake8", "Flake8-pyproject", "pep8-naming", "tox>=3"]
test = ["mock>=4", "pytest>=7", "pytest-mock>=3", "pytest-cov"]
docs = ["sphinx>=5", "sphinx-rtd-theme"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.dynamic]
version = { attr = "gsheets.__version__" }

[tool.flake8]
exclude = ["docs", ".tox"]
ignore = ["E126", "E128", "W503"]
max-line-length = 100

[tool.pytest.ini_options]
minversion = "6"
testpaths = ["gsheets", "tests"]
addopts = [
  "--doctest-modules",
  "--doctest-glob='*.rst'", "--ignore=docs/conf.py",
  "--cov", "--cov-report=term", "--cov-report=html",
  "--strict-config", "--strict-markers",
]
mock_use_standalone_module = true
log_cli_level = "WARNING"
log_file = "test-log.txt"
log_file_level = "DEBUG"

[tool.coverage.run]
source = ["gsheets"]
branch = false

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py{311,310,39,38}
  skip_missing_interpreters = true

  [testenv]
  extras = test
  commands = python -X dev run-tests.py {posargs}
"""
