[metadata]
license_file = LICENSE

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 3.3
testpaths = gsheets tests
addopts =
  --doctest-modules --doctest-glob='*.rst' --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html
mock_use_standalone_module = true

[coverage:run]
source = gsheets, tests
branch = true

[coverage:html]
directory = coverage

[flake8]
ignore = E126,E128
max-line-length = 100
exclude = docs, .tox
