[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 4
testpaths = gsheets tests
addopts =
  --doctest-modules --doctest-glob='*.rst' --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html
mock_use_standalone_module = true

[coverage:run]
source = gsheets
branch = false

[flake8]
ignore = E126,E128,W503
max-line-length = 100
exclude = docs, .tox
