[metadata]
license_file = LICENSE.txt

[sdist]
formats = zip

[tool:pytest]
minversion = 6
testpaths =
  gsheets
  tests
addopts =
  --doctest-glob='*.rst'
  --doctest-modules --ignore=docs/conf.py
  --cov --cov-report=term --cov-report=html
  --strict-config --strict-markers
mock_use_standalone_module = true
log_cli_level = WARNING
log_file = test-log.txt
log_file_level = DEBUG

[coverage:run]
source = gsheets
branch = false

[flake8]
ignore = E126,E128,W503
max-line-length = 100
exclude = docs, .tox
